# Fluyer

./: bun.lockb  eslint.config.js  package.json
src-tauri/: Cargo.toml
src-tauri/src/: wgpu_renderer.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/folder/: commands.rs
src-tauri/src/music/: bass.rs  media_session.rs  player.rs
src-tauri/src/music/commands/: queue.rs
src-tauri/tauri-plugin-fluyer/: Cargo.toml
src/lib/constants/: TauriCommands.ts
src/lib/features/album/components/: AlbumItem.svelte
src/lib/features/album/viewmodels/: useAlbumItem.svelte.ts  useAlbumList.svelte.ts
src/lib/features/collection/viewmodels/: useCollectionInfo.svelte.ts
src/lib/features/menu/components/: Menu.svelte
src/lib/features/music/components/: MusicList.svelte
src/lib/features/music/viewmodels/: useMusicItem.svelte.ts  useMusicList.svelte.ts
src/lib/features/playerbar/viewmodels/: usePlayerBar.svelte.ts
src/lib/features/titlebar/components/: TitleBar.svelte
src/lib/services/: FolderService.svelte.ts  ProgressService.svelte.ts
src/lib/tauri/: TauriLibraryAPI.ts
src/routes/play/viewmodels/: usePlayPage.svelte.ts
