[package]
name = "fluyer"
version = "1.2.0"
description = "🦋🎵 Music Player"
authors = ["alvindimas05"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluyer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
serde = { version = "1", features = ["derive"] }
walkdir = "2.5.0"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-prevent-default = "5"
tauri-plugin-fluyer = { path = "./tauri-plugin-fluyer" }
regex = "1.12"
tauri-plugin-decorum = "1.1.1"
image = "0.25.10"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = "0.4.41"
rusqlite_migration = "2.6"
tokio = { version = "1.52.3", features = ["process", "sync"] }
state = "0.6.0"
serde_json = "1"
futures = "0.3.31"
symphonia = { version = "0.6.0", features = ["all", "opt-simd"] }
urlencoding = "2.1.3"
wgpu = "28"
rand = "0.10.1"
bytemuck = { version = "1.24.0", features = ["derive"] }
libblur = { version = "0.24", features = ["image"] }
tauri-plugin-fs = "2"
tauri-plugin-device-info = "1.0.0"
fast_image_resize = { version = "6.0.0", features = ["image"] }
tauri-plugin-opener = "2"

[target.'cfg(not(target_os = "linux"))'.dependencies]
femtovg = { version = "0.23", features = ["wgpu", "image-loading"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }

[target.'cfg(target_os = "android")'.dependencies]
libloading = "0.8"
# FIXME: Using reqwest 0.12.12 for Android as reqwest 0.13.1 has issues with Android
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
jni = "0.21"
ndk = "0.8"
raw-window-handle = "0.6"
ndk-context = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
libloading = "0.8"
femtovg = { version = "0.23", features = ["image-loading"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[profile.dev]
debug = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
