[package]
name = "tauri-plugin-fluyer"
version = "1.2.0"
authors = [ "alvindimas05" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/node_modules"]
links = "tauri-plugin-fluyer"

[dependencies]
tauri = { version = "2.11.3", features = ["specta"] }
serde = "1"
thiserror = "2"
serde_json = "1.0.149"
specta = "=2.0.0-rc.25"

[build-dependencies]
tauri-plugin = { version = "2.6.3", features = ["build"] }
tauri-build = "2.6.3"
